--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ html, body{
     background-color: hsl(217, 54%, 11%);
     font-size: 18px;
     font-family: "Outfit", sans-serif;
+    font-weight: 300;
     display:flex;
     width: 100%;
     height: 100%;
+    align-items: center;
 }
 
 main{
@@ -21,12 +23,13 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
-    width: 25rem;
-    height: 45rem;
+    justify-items: center;
+    margin: 0 auto;
+    width: 18rem;
+    height: 35rem;
     box-shadow: 5px 10px 80px hsl(0, 0%, 0%);
     border-radius: 10px;
-    padding: 30px;
+    padding: 20px;
 }
 
 .nft-photo {
@@ -51,37 +54,46 @@ h1:hover{
 .nft-details{
     display:flex;
     flex-direction: column;
-    width: 100%;
-    justify-self: center;
-    margin: auto;
-}
-
-.nft-stats{
-    display:flex;
-    flex-direction: row;
-    align-self: center;
     justify-self: center;
     width: 100%;
 }
 
 .nft-collection-info{
     color: hsl(0, 0%, 100%);
+    line-height: 1rem;
+}
+
+.nft-stats{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 }
 
 .etherium {
     color: hsl(178, 100%, 50%);
     display:flex;
-    margin: auto;
+    text-align: left;
 }
 
 .time-left{
     color: hsl(215, 51%, 70%);
     display:flex;
-    align-self: left;
+    text-align: right;
 }
 
 .clock-icon,  .etherium-icon{
     height: 1rem;
+    position: relative;
+    margin-top: 20px;
+    margin-right: 5px;
+}
+
+hr{
+    border-color: hsl(215, 51%, 70%);
+    border-width: .5px;
+    width: 100%;
 }
 
 .creator-info{
@@ -92,6 +104,7 @@ h1:hover{
 
 .creator-name {
     color: hsl(0, 0%, 100%);
+    padding: 2px;
 }
 
 .creator-name:hover{
@@ -101,7 +114,12 @@ h1:hover{
 .creator-pic{
     height: 2rem;
     border-color:hsl(0, 0%, 100%);
-    border-width: 2px;
+    border-style: solid;
+    border-radius: 50%;
+    border-width: 1px;
+    margin-top: 15px;
+    margin-right: 10px;
+
 }
 
 
