--- a/style.css
+++ b/style.css
@@ -33,16 +33,54 @@ main{
 }
 
 .nft-photo {
-    width: auto;
-}
-
-.nft-photo:hover {
-    
+    position: relative;
+    width: 100%;
+    max-width: 400px;
 }
 
 .nft-cube {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
+}
+
+.eye-icon{
+    width: 20%;
+    height:20%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    transition: .3s ease;
+    display: flex;
+    align-items: center;
+    margin: auto;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .3s ease;
+    background-color: hsl(178, 100%, 50%);
+    border-radius: 10px;
+    padding: 0;
+    margin: 0;
+}
+
+.overlay:hover{
+    opacity: 30%;
+}
+
+.eye-icon:hover{
+    opacity: 1;
 }
 
 h1{
