--- a/style.css
+++ b/style.css
@@ -42,6 +42,32 @@ main{
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    z-index: 0;
+}
+
+.full-overlay{
+    opacity: 0;
+}
+
+.full-overlay:hover{
+    opacity: 1;
+}
+
+.overlay-color{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    transition: .3s ease;
+    background-color: hsl(178, 100%, 50%);
+    border-radius: 10px;
+    padding: 0;
+    margin: 0;
+    z-index: 1;
+    opacity: 30%;
 }
 
 .eye-icon{
@@ -52,35 +78,11 @@ main{
     bottom: 0;
     left: 0;
     right: 0;
-    opacity: 0;
     transition: .3s ease;
     display: flex;
     align-items: center;
     margin: auto;
-}
-
-.overlay{
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .3s ease;
-    background-color: hsl(178, 100%, 50%);
-    border-radius: 10px;
-    padding: 0;
-    margin: 0;
-}
-
-.overlay:hover{
-    opacity: 30%;
-}
-
-.eye-icon:hover{
-    opacity: 1;
+    z-index: 2;
 }
 
 h1{
